--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,22 @@
 .container{
   border: 1px solid black;
 }
-
 .col-1{
   border: 1px solid black;
   background-color: pink;
-  height: 100px;
 }
 .col-1 p{
+  text-align: center;
+  line-height: 100px;
+  vertical-align: middle;
+}
+
+.col-12{
+  border: 1px solid black;
+  border-top: none;
+  background-color: pink;
+}
+.col-12 p{
   text-align: center;
   line-height: 100px;
   vertical-align: middle;
