--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,37 @@
+/* mix */
 .container{
-  border: 1px solid black;
+  border: 1px solid green;
 }
+p{
+  text-align: center;
+  line-height: 250px;
+  vertical-align: middle;
+}
+/* /mix */
+
+/* stile colonne */
 .col-1{
   border: 1px solid black;
   background-color: pink;
 }
-.col-1 p{
-  text-align: center;
-  line-height: 100px;
-  vertical-align: middle;
-}
 
 .col-12{
   border: 1px solid black;
-  border-top: none;
   background-color: pink;
 }
-.col-12 p{
-  text-align: center;
-  line-height: 100px;
-  vertical-align: middle;
+
+.col-8{
+  border: 1px solid black;
+  background-color: pink;
 }
+
+.col-2{
+  border: 1px solid black;
+  background-color: pink;
+}
+
+.col-6{
+  border: 1px solid black;
+  background-color: pink;
+}
+/* /stile colonne */
