--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
 /* mix */
-.container{
-  border: 1px solid green;
-}
 p{
   text-align: center;
   line-height: 250px;
-  vertical-align: middle;
+
 }
 /* /mix */
 
@@ -14,24 +11,23 @@ p{
   border: 1px solid black;
   background-color: pink;
 }
-
-.col-12{
-  border: 1px solid black;
-  background-color: pink;
-}
-
-.col-8{
-  border: 1px solid black;
-  background-color: pink;
-}
-
 .col-2{
   border: 1px solid black;
   background-color: pink;
 }
-
 .col-6{
   border: 1px solid black;
   background-color: pink;
+}
+.col-8{
+  border: 1px solid black;
+  background-color: pink;
+}
+.col-12{
+  border: 1px solid black;
+  background-color: pink;
+}
+.nested{
+  border: 1px solid white;  
 }
 /* /stile colonne */
