--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ p{
 }
 .nested{
   border: 1px solid white;
-  background-color: red;
+  background-color: green;
   margin: 2px;
 }
 .col-2.nested{
