--- a/css/style.css
+++ b/css/style.css
@@ -26,15 +26,14 @@ p{
   border: 1px solid black;
   background-color: pink;
 }
+.nested-col{
+  padding: 5px;
+}
 .nested{
   border: 1px solid white;
   background-color: green;
-  margin: 2px;
 }
-.col-2.nested{
-  width: calc(((100% / 12) * 2) - 8px);
-}
-.col-6.nested{
-  width: calc(((100% / 12) * 6) - 8px);
-}
+
+
+
 /* /stile colonne */
