--- a/css/style.css
+++ b/css/style.css
@@ -6,23 +6,7 @@ p{
 /* /mix */
 
 /* stile colonne */
-.col-1{
-  border: 1px solid black;
-  background-color: pink;
-}
-.col-2{
-  border: 1px solid black;
-  background-color: pink;
-}
-.col-6{
-  border: 1px solid black;
-  background-color: pink;
-}
-.col-8{
-  border: 1px solid black;
-  background-color: pink;
-}
-.col-12{
+[class*='col-']{
   border: 1px solid black;
   background-color: pink;
 }
@@ -33,7 +17,5 @@ p{
   border: 1px solid white;
   background-color: green;
 }
-
-
 
 /* /stile colonne */
